--- a/package.json
+++ b/package.json
@@ -22,59 +22,59 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "babel-plugin-styled-components": "^1.11.1",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.24.52",
+    "gatsby": "^2.24.53",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-catch-links": "^2.3.11",
     "gatsby-plugin-exclude": "^1.0.2",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
-    "gatsby-plugin-manifest": "^2.4.26",
+    "gatsby-plugin-manifest": "^2.4.27",
     "gatsby-plugin-notify": "^1.0.0",
     "gatsby-plugin-offline": "^3.2.26",
     "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.30",
+    "gatsby-plugin-sharp": "^2.6.31",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-typescript": "^2.4.18",
     "gatsby-plugin-typescript-checker": "^1.1.1",
     "gatsby-remark-images": "^3.3.28",
-    "gatsby-source-contentful": "^2.3.40",
+    "gatsby-source-contentful": "^2.3.41",
     "gatsby-source-filesystem": "^2.3.27",
     "gatsby-source-google-spreadsheet": "^2.0.0",
-    "gatsby-source-microcms": "^0.2.0",
+    "gatsby-source-microcms": "^1.0.0",
     "gatsby-source-wordpress": "^3.3.31",
-    "gatsby-transformer-remark": "^2.8.31",
-    "gatsby-transformer-sharp": "^2.5.13",
+    "gatsby-transformer-remark": "^2.8.32",
+    "gatsby-transformer-sharp": "^2.5.14",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
-    "@types/node": "^14.6.2",
-    "@types/react": "^16.9.48",
+    "@types/node": "^14.6.4",
+    "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
-    "@types/styled-components": "^5.1.2",
+    "@types/styled-components": "^5.1.3",
     "@types/vfile-message": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "devcert": "^1.1.3",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-jest": "^24.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.13",
-    "npm-check-updates": "^8.0.1",
+    "lint-staged": "^10.3.0",
+    "npm-check-updates": "^8.1.0",
     "npm-run-all": "^4.1.5",
     "opener": "^1.5.2",
     "prettier": "2.1.1",
-    "stylelint": "^13.6.1",
+    "stylelint": "^13.7.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-custom-processor-loader": "^0.6.0",
@@ -87,7 +87,7 @@
   "resolutions": {
     "devcert": "1.1.0",
     "remark": "12.0.0",
-    "@types/react": "^16.9.48",
+    "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8"
   },
   "browserslist": [
@@ -127,8 +127,8 @@
     ]
   },
   "scripts": {
-    "setup:default": "",
     "setup:cms": "",
+    "setup:default": "rm -rf src/templates && rm -rf src/markdowns && rm src/components/Presentations/BlogListLink.tsx && rm src/components/Presentations/BlogListPagenation.tsx && rm src/components/Presentations/BlogPostData.tsx && rm src/components/Presentations/BlogPostPagenation.tsx && rm src/components/Images/MarkdownImage.tsx && sed -e 's/blog-list/fourth-page/' -e 's/Blog Page/Fourth Page/' src/components/Managements/Header.tsx > replace && mv replace src/components/Managements/Header.tsx",
     "setup:browser": "wait-on https://localhost:8000 && opener -a 'Google Chrome Canary' https://localhost:8000 && opener -a 'Google Chrome Canary' https://localhost:8000/___graphql",
     "setup:develop": "gatsby develop --https",
     "dev": "npm-run-all -p setup:browser setup:develop",
