--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -35,7 +35,7 @@ settings:
 #
 # Set Linting Rules Below.
 extends:
-  - "standard"
+  - "eslint:recommended"
   - "plugin:@typescript-eslint/recommended"
   - "plugin:prettier/recommended"
   - "plugin:react/recommended"
