--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,8 @@ on:
 
 env:
   LAUNCH_JEST: off # Launch Jest. [ on, off ]
-  LAUNCH_ESLINT: off # Launch ESLint. [ on, off ]
-  LAUNCH_BUILD: off # Launch Build. [ on, off ]
+  LAUNCH_ESLINT: on # Launch ESLint. [ on, off ]
+  LAUNCH_BUILD: on # Launch Build. [ on, off ]
 
 jobs:
   jest-and-eslint:
