--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -57,13 +57,16 @@ rules:
   "@typescript-eslint/member-delimiter-style": off
   "@typescript-eslint/no-empty-function": off
   "@typescript-eslint/prefer-interface": off
+  "@typescript-eslint/no-unused-vars":
+    - error
+    - varsIgnorePattern: "^BreakPoint"
   "max-classes-per-file":
     - error
     - 2
   "no-bitwise":
     - error
     - allow:
-        - "~"
+      - "~"
   "import/order": off
   "sort-keys": off
   "no-multiple-empty-lines": off
