--- a/package.json
+++ b/package.json
@@ -15,76 +15,76 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.1",
     "@contentful/rich-text-types": "^14.1.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/free-regular-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "babel-plugin-styled-components": "^1.11.1",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.24.54",
+    "gatsby": "^2.24.80",
     "gatsby-background-image": "^1.1.2",
-    "gatsby-image": "^2.4.17",
-    "gatsby-plugin-catch-links": "^2.3.11",
+    "gatsby-image": "^2.4.21",
+    "gatsby-plugin-catch-links": "^2.3.15",
     "gatsby-plugin-exclude": "^1.0.2",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
-    "gatsby-plugin-manifest": "^2.4.28",
+    "gatsby-plugin-manifest": "^2.4.35",
     "gatsby-plugin-notify": "^1.0.0",
-    "gatsby-plugin-offline": "^3.2.27",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.32",
-    "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-plugin-typescript": "^2.4.18",
+    "gatsby-plugin-offline": "^3.2.33",
+    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sharp": "^2.6.42",
+    "gatsby-plugin-styled-components": "^3.3.14",
+    "gatsby-plugin-typescript": "^2.4.22",
     "gatsby-plugin-typescript-checker": "^1.1.1",
-    "gatsby-remark-images": "^3.3.29",
-    "gatsby-source-contentful": "^2.3.42",
-    "gatsby-source-filesystem": "^2.3.28",
+    "gatsby-remark-images": "^3.3.35",
+    "gatsby-source-contentful": "^2.3.55",
+    "gatsby-source-filesystem": "^2.3.35",
     "gatsby-source-google-spreadsheet": "^2.0.0",
-    "gatsby-source-microcms": "^1.0.0",
-    "gatsby-source-wordpress": "^3.3.32",
-    "gatsby-transformer-remark": "^2.8.33",
-    "gatsby-transformer-sharp": "^2.5.14",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "gatsby-source-microcms": "^1.0.1",
+    "gatsby-source-wordpress": "^3.3.39",
+    "gatsby-transformer-remark": "^2.8.42",
+    "gatsby-transformer-sharp": "^2.5.18",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
-    "@types/node": "^14.6.4",
-    "@types/react": "^16.9.49",
+    "@types/node": "^14.11.10",
+    "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
-    "@types/styled-components": "^5.1.3",
+    "@types/styled-components": "^5.1.4",
     "@types/vfile-message": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "devcert": "^1.1.3",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jest": "^24.0.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "husky": "^4.3.0",
-    "lint-staged": "^10.3.0",
-    "npm-check-updates": "^8.1.1",
+    "lint-staged": "^10.4.1",
+    "npm-check-updates": "^9.1.0",
     "npm-run-all": "^4.1.5",
     "opener": "^1.5.2",
-    "prettier": "2.1.1",
-    "stylelint": "^13.7.0",
+    "prettier": "2.1.2",
+    "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-custom-processor-loader": "^0.6.0",
     "stylelint-processor-styled-components": "^1.10.0",
-    "stylelint-webpack-plugin": "^2.1.0",
-    "typescript": "^4.0.2",
+    "stylelint-webpack-plugin": "^2.1.1",
+    "typescript": "^4.0.3",
     "wait-on": "^5.2.0",
     "webpack-build-notifier": "^2.1.0"
   },
   "resolutions": {
     "devcert": "1.1.0",
     "remark": "12.0.0",
-    "@types/react": "^16.9.49",
+    "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8"
   },
   "browserslist": [
@@ -124,7 +124,7 @@
     ]
   },
   "scripts": {
-    "setup:cms": "",
+    "setup:cms": "rm src/pages/fourth-page.tsx",
     "setup:default": "rm -rf src/templates && rm -rf src/markdowns && rm src/components/Presentations/BlogListLink.tsx && rm src/components/Presentations/BlogListPagenation.tsx && rm src/components/Presentations/BlogPostData.tsx && rm src/components/Presentations/BlogPostPagenation.tsx && rm src/components/Images/MarkdownImage.tsx && sed -e 's/blog-list/fourth-page/' -e 's/Blog Page/Fourth Page/' src/components/Managements/Header.tsx > replace && mv replace src/components/Managements/Header.tsx",
     "setup:browser": "wait-on https://localhost:8000 && opener -a 'Google Chrome Canary' https://localhost:8000 && opener -a 'Google Chrome Canary' https://localhost:8000/___graphql",
     "setup:develop": "gatsby develop --https",
