--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -21,6 +21,7 @@ rules:
   value-no-vendor-prefix:
     - true
     - ignoreValues:
+      - grid
       - fill-available
   value-keyword-case:
     - lower
