--- a/package.json
+++ b/package.json
@@ -65,11 +65,13 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "husky": "^4.3.6",
+    "immer": "^8.0.0",
     "lint-staged": "^10.5.3",
     "npm-check-updates": "^10.2.5",
     "npm-run-all": "^4.1.5",
     "opener": "^1.5.2",
     "prettier": "2.2.1",
+    "react-hook-form": "^6.14.1",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-config-styled-components": "^0.1.1",
@@ -96,7 +98,11 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx,js,jsx}": [ "prettier --write", "eslint --fix --max-warnings 0", "stylelint" ],
+    "src/**/*.{ts,tsx,js,jsx}": [
+      "prettier --write",
+      "eslint --fix --max-warnings 0",
+      "stylelint"
+    ],
     "gatsby-*.js": "prettier --write",
     "setup.js": "prettier --write"
   },
