--- a/package.json
+++ b/package.json
@@ -13,90 +13,87 @@
     "gatsby"
   ],
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^14.1.2",
+    "@contentful/rich-text-react-renderer": "^14.1.3",
     "@contentful/rich-text-types": "^14.1.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "babel-plugin-styled-components": "^1.12.0",
-    "dotenv": "^8.2.0",
-    "gatsby": "^2.29.1",
-    "gatsby-background-image": "^1.3.1",
-    "gatsby-image": "^2.8.0",
-    "gatsby-plugin-catch-links": "^2.7.0",
+    "dotenv": "^10.0.0",
+    "gatsby": "^3.6.2",
+    "gatsby-background-image": "^1.5.3",
+    "gatsby-plugin-catch-links": "^3.6.0",
     "gatsby-plugin-exclude": "^1.0.2",
-    "gatsby-plugin-graphql-codegen": "^2.7.1",
-    "gatsby-plugin-manifest": "^2.9.0",
+    "gatsby-plugin-graphql-codegen": "^3.0.0",
+    "gatsby-plugin-image": "^1.6.0",
+    "gatsby-plugin-manifest": "^3.6.0",
     "gatsby-plugin-notify": "^1.0.0",
-    "gatsby-plugin-offline": "^3.7.0",
-    "gatsby-plugin-react-helmet": "^3.7.0",
-    "gatsby-plugin-sharp": "^2.11.1",
-    "gatsby-plugin-styled-components": "^3.7.0",
-    "gatsby-plugin-typescript": "^2.9.0",
+    "gatsby-plugin-offline": "^4.6.0",
+    "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-plugin-styled-components": "^4.6.0",
+    "gatsby-plugin-typescript": "^3.6.0",
     "gatsby-plugin-typescript-checker": "^1.1.1",
-    "gatsby-remark-images": "^3.8.0",
-    "gatsby-source-contentful": "^4.3.0",
-    "gatsby-source-filesystem": "^2.8.0",
+    "gatsby-remark-images": "^5.3.0",
+    "gatsby-source-contentful": "^5.6.1",
+    "gatsby-source-filesystem": "^3.6.0",
     "gatsby-source-google-spreadsheet": "^2.0.0",
-    "gatsby-source-microcms": "^1.0.1",
-    "gatsby-source-wordpress": "^3.8.0",
-    "gatsby-transformer-remark": "^2.13.0",
-    "gatsby-transformer-sharp": "^2.9.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "gatsby-source-microcms": "^1.1.0",
+    "gatsby-source-wordpress": "^5.6.0",
+    "gatsby-transformer-remark": "^4.3.0",
+    "gatsby-transformer-sharp": "^3.6.0",
+    "gbimage-bridge": "^0.1.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@danbruegge/gatsby-plugin-stylelint": "^4.1.0",
-    "@types/node": "^14.14.14",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-helmet": "^6.1.0",
-    "@types/styled-components": "^5.1.7",
+    "@types/node": "^15.12.1",
+    "@types/react": "^17.0.9",
+    "@types/react-dom": "^17.0.6",
+    "@types/react-helmet": "^6.1.1",
+    "@types/styled-components": "^5.1.9",
     "@types/vfile-message": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
     "devcert": "^1.1.3",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-jest": "^24.1.3",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "husky": "^4.3.6",
-    "immer": "^8.0.0",
-    "lint-staged": "^10.5.3",
-    "npm-check-updates": "^10.2.5",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-webpack-plugin": "^2.5.4",
+    "husky": "^6.0.0",
+    "jest": "^27.0.4",
+    "lint-staged": "^11.0.0",
+    "npm-check-updates": "^11.6.0",
     "npm-run-all": "^4.1.5",
     "opener": "^1.5.2",
-    "prettier": "2.2.1",
-    "react-hook-form": "^6.14.1",
-    "stylelint": "^13.8.0",
-    "stylelint-config-standard": "^20.0.0",
+    "prettier": "2.3.1",
+    "react-hook-form": "^7.8.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-custom-processor-loader": "^0.6.0",
     "stylelint-processor-styled-components": "^1.10.0",
     "stylelint-webpack-plugin": "^2.1.1",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3",
-    "wait-on": "^5.2.0"
+    "ts-jest": "^27.0.2",
+    "typescript": "^4.3.2",
+    "wait-on": "^5.3.0"
   },
   "resolutions": {
     "devcert": "1.1.0",
     "remark": "12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
+    "@types/react": "^17.0.9",
+    "@types/react-dom": "^17.0.6"
   },
   "browserslist": [
     "last 2 versions",
     "ie >= 11"
   ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged --allow-empty"
-    }
-  },
   "lint-staged": {
     "src/**/*.{ts,tsx,js,jsx}": [
       "prettier --write",
